-fixed timer
-added `-font <name> <size>`
-added public setting to welcomer