@@ -1,7 +1,6 @@
 package me.finz0.osiris.module.modules.movement;
 
 import me.finz0.osiris.OsirisMod;
-import me.finz0.osiris.command.Command;
 import me.finz0.osiris.event.events.PacketEvent;
 import me.finz0.osiris.module.Module;
 import me.zero.alpine.listener.EventHandler;
